<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@color/black"
    tools:context=".FacilityActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#232323"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/btnBackProfile"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_back_arrow"
            android:contentDescription="@string/back_button"
            app:tint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/headerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/sansation_regular"
            android:text="@string/edit_facility_profile"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toEndOf="@id/btnBackProfile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:maxWidth="300dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/new_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profileIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_facility_profile"
                android:contentDescription="@string/profile_picture"
                android:padding="8dp" />

            <TextView
                android:id="@+id/initials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sansation_bold"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/facility"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:textColor="#CCCCCC"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facility_name"
                android:textColor="@color/white"
                android:fontFamily="@font/sansation_bold"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/facilityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_facility_name"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#CCCCCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/white"
                android:fontFamily="@font/sansation_bold"
                android:textSize="16sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/facilityAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_facility_address"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#CCCCCC"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/address_suggestions"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:elevation="4dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/capacity"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/sansation_bold"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/facilityCapacity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_facility_capacity"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#CCCCCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_information"
                android:textColor="@color/white"
                android:fontFamily="@font/sansation_bold"
                android:textSize="16sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/facilityContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_contact_information"
                android:background="@drawable/edit_text_background"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#CCCCCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:fontFamily="@font/sansation_bold"
                android:textSize="16sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/facilityEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_facility_email"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="5dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#CCCCCC"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/property_owner"
                android:textColor="@color/white"
                android:fontFamily="@font/sansation_bold"
                android:textSize="16sp"
                android:layout_marginTop="12dp" />

            <EditText
                android:id="@+id/facilityOwner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_property_owner_name"
                android:background="@drawable/edit_text_background"
                android:layout_marginTop="5dp"
                android:padding="12dp"
                android:textColor="@color/black"
                android:textColorHint="#CCCCCC"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:gravity="left"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"

                    android:fontFamily="@font/sansation_bold"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:visibility="gone"/>

                <Switch
                    android:id="@+id/switch_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:thumbTint="@color/white"
                    android:trackTint="#B3FFFFFF"
                    tools:ignore="UseSwitchCompatOrMaterialXml"
                    android:visibility="gone"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="14dp"
                android:text="@string/save"
                android:textColor="#F5F5F5"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:letterSpacing="0.05"
                android:backgroundTint="#4672A6"
                android:fontFamily="@font/sansation_regular"
                android:elevation="6dp"
                android:outlineProvider="background"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/clearAllButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#FF6F61"
                    android:fontFamily="@font/sansation_bold"
                    android:letterSpacing="0.05"
                    android:textColor="#FFFFFFFF"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:text="@string/clear_all" />
                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="#1DB954"
                    android:fontFamily="@font/sansation_bold"
                    android:letterSpacing="0.05"
                    android:textColor="#FFFFFFFF"
                    android:padding="12dp"
                    android:textStyle="bold"
                    android:layout_marginStart="8dp"
                    android:text="@string/save" />
            </LinearLayout>

    </LinearLayout>
</ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>